[package]
description = "Solana Program Test Framework"
name = "solana-program-test"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
assert_matches = { version = "1.5.0" }
async-trait = { version = "0.1.77" }
base64 = { version = "0.21.7" }
bincode = { version = "1.3.3" }
chrono-humanize = { version = "0.2.3" }
crossbeam-channel = { version = "0.5.11" }
log = { version = "0.4.20" }
serde = { version = "1.0.195" }
solana-accounts-db = { version = "1.18.18" }
solana-banks-client = { version = "1.18.18" }
solana-banks-interface = { version = "1.18.18" }
solana-banks-server = { version = "1.18.18" }
solana-bpf-loader-program = { version = "1.18.18" }
solana-logger = { version = "1.18.18" }
solana-program-runtime = { version = "1.18.18" }
solana-runtime = { version = "1.18.18" }
solana-sdk = { version = "1.18.18" }
solana-vote-program = { version = "1.18.18" }
solana_rbpf = { version = "0.8.0" }
test-case = { version = "3.3.1" }
thiserror = { version = "1.0.56" }
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
solana-stake-program = { workspace = true }
